--- a/Музыкальный кот/index.html
+++ b/Музыкальный кот/index.html
@@ -17,10 +17,13 @@ a img {padding:0px;
 bottom:0px;}
 img {
   height:130px;
-  padding:10px;
+  padding:10px; 
 }
-.listOFF {width: 450px;}
-.list div {
+.list0 {
+  width: 470px;
+  float:left;
+}
+.list div,.content {
   cursor:pointer;
   float:left;
   color:#EEB01F;
@@ -34,7 +37,7 @@ h1 {
   font-size:20px;
   margin:10px 0px 0px 0px ;
 }
-
+div p{ padding:0px 0px 0px 10px;}
   </style>
 </head>
 <body>
@@ -81,10 +84,10 @@ style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" tit
 VK.Widgets.Like("vk_like", {
     type: "button",
     width: 200,
-    height: 20,
+    height: 20, 
     pageTitle: "Ответы на вопросы",
     pageDescription: "Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!",
-    text: "Пыщ пыщ ололо",
+    text: "Пыщ пыщ ололо", 
     pageUrl: "https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Ответы",
     pageImage: "http://screen.fst.su/support/19FQ494.jpg",
     },429);
@@ -93,7 +96,7 @@ VK.Widgets.Like("vk_like", {
 <div class="list">
   <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Ответы';" >
     <img align="left" src="http://screen.fst.su/support/19II87M.png" alt="">
-    <h1>Ответы на вопросы</h1>
+    <h1>Ответы на вопросы</h1> 
 Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!
   </div>
   <div onclick="location.href='http://vk.com/app4190522';" >
@@ -102,25 +105,38 @@ VK.Widgets.Like("vk_like", {
 Не знаешь как их решить, хочешь решать быстрее? Тогда тебе сюда, тренируйся и решай быстрее всех!
   </div>
   <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Пузыри';" >
-    <img align="left" src="http://screen.fst.su/support/19ISUEK.png" alt="">
+    <img align="left" src="http://screen.fst.su/support/19ISUEK.png" alt=""> 
     <h1>Как решать пузыри?</h1>
 Подробная инструкция ПРАВИЛЬНОГО решения пузырей. И пусть все долбаёбы думают что ты читер!
   </div>
   <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Музыкальный кот';" >
     <img align="left" src="http://screen.fst.su/support/19IT2FH.png" alt="">
     <h1>Музыкальный кот</h1>
-Есть в планах воссоздание головоломки, но на данный момент бесполезная флешка, хотя может кому-нибудь пригодится чтобы запомнить ноты на слух
+Есть в планах воссоздание головоломки, но на данный момент бесполезная флешка, хотя может кому-нибудь пригодится чтобы запомнить ноты на слух  
   </div>
   <div onclick="location.href='http://userstyles.org/styles/97683/labirint-1';" >
-    <img align="left" src="http://screen.fst.su/support/19IT7B0.png" alt="">
-    <h1>CSS стиль для лаба</h1>
+    <img align="left" src="http://screen.fst.su/support/19IT7B0.png" alt=""> 
+    <h1>CSS стиль для лаба</h1> 
 Задрало каждый раз закрывать окошко приглашеня  друзей, хочется сделать окно больше не используя полноэкранный режим? Тогда попробуйте CSS стиль
-  </div>
-    <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Жулики';" >
-    <img align="left" src="http://screen.fst.su/support/19IVW3C.png" alt="">
-    <h1>Наши подражатели</h1>
+  </div>  
+  <!--  <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Жулики';" >
+    <img align="left" src="http://screen.fst.su/support/19IVW3C.png" alt=""> 
+    <h1>Наши подражатели</h1> 
 Что сказать, когда нечего сказать?
-  </div>
-</div>
-</body>
+  </div>--> 
+  <div class="content" style="height:525px;" >
+    <p>
+  Нету времени с котейкой заниматься, поэтому пока что никуя не работает, пока можете просто побрынькать ;)
+   </p>
+<object style="margin:-40px 0 0 0 ;backgroun3d:red;" type="application/x-shockwave-flash" data="https://googledrive.com/host/0B0zTgDj4fTXrM2thMU1OekdJZmc" width="460" height="500">
+<param name="movie" value="https://googledrive.com/host/0B0zTgDj4fTXrM2thMU1OekdJZmc" />
+<param name="wmode" value="transparent" />
+</object>
+    <div style="backgroundOFF:red !important;height:35px;margin:-60px 0 0 0 ;position:absolute;"></div>
+ </div>   
+ </div>    
+
+  
+
+  </body>
 </html>
