--- a/Пузыри/index.html
+++ b/Пузыри/index.html
@@ -19,8 +19,11 @@ img {
   height:130px;
   padding:10px;
 }
-.listOFF {width: 450px;}
-.list div {
+.list0 {
+  width: 470px;
+  float:left;
+}
+.list div,.content {
   cursor:pointer;
   float:left;
   color:#EEB01F;
@@ -34,7 +37,7 @@ h1 {
   font-size:20px;
   margin:10px 0px 0px 0px ;
 }
-
+div p{ padding:0px 0px 0px 10px;}
   </style>
 </head>
 <body>
@@ -116,11 +119,23 @@ VK.Widgets.Like("vk_like", {
     <h1>CSS стиль для лаба</h1>
 Задрало каждый раз закрывать окошко приглашеня  друзей, хочется сделать окно больше не используя полноэкранный режим? Тогда попробуйте CSS стиль
   </div>
-    <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Жулики';" >
+  <!--  <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Жулики';" >
     <img align="left" src="http://screen.fst.su/support/19IVW3C.png" alt="">
     <h1>Наши подражатели</h1>
 Что сказать, когда нечего сказать?
-  </div>
-</div>
-</body>
+  </div>-->
+  <div class="content" style="float:left;width1:540px;" >
+    <p>
+  Как появится время обязательно сделаю подробную инструкцию, и даже возможность потрениноваться. Пока-же можете потренироваться на данной флешке. Дам только совет, не долбите как дятлы по очереди TAB SPASE это долго и глупо, ещё и клаву расхуярите ;)
+   </p>
+<object type="application/x-shockwave-flash" data="https://googledrive.com/host/0B0zTgDj4fTXrSFMwckN3cTR6WlU" width="460" height="333">
+<param name="movie" value="https://googledrive.com/host/0B0zTgDj4fTXrSFMwckN3cTR6WlU" />
+<param name="wmode" value="transparent" />
+</object>
+ </div>
+ </div>
+
+
+
+  </body>
 </html>
