--- a/Музыкальный кот/index.html
+++ b/Музыкальный кот/index.html
@@ -88,13 +88,13 @@ VK.Widgets.Like("vk_like", {
     pageTitle: "Ответы на вопросы",
     pageDescription: "Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!",
     text: "Пыщ пыщ ололо", 
-    pageUrl: "https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Ответы",
+          pageUrl: "https://labirint1.github.io/Ответы",
     pageImage: "http://screen.fst.su/support/19FQ494.jpg",
     },429);
 </script>
 
 <div class="list">
-  <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Ответы';" >
+  <div onclick="location.href='/ответы';" >
     <img align="left" src="http://screen.fst.su/support/19II87M.png" alt="">
     <h1>Ответы на вопросы</h1> 
 Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!
@@ -104,12 +104,12 @@ VK.Widgets.Like("vk_like", {
     <h1>Пароли тренировка</h1>
 Не знаешь как их решить, хочешь решать быстрее? Тогда тебе сюда, тренируйся и решай быстрее всех!
   </div>
-  <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Пузыри';" >
+  <div onclick="location.href='/пузыри';" >
     <img align="left" src="http://screen.fst.su/support/19ISUEK.png" alt=""> 
     <h1>Как решать пузыри?</h1>
 Подробная инструкция ПРАВИЛЬНОГО решения пузырей. И пусть все долбаёбы думают что ты читер!
   </div>
-  <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Музыкальный кот';" >
+  <div onclick="location.href='/музыкальный кот';" >
     <img align="left" src="http://screen.fst.su/support/19IT2FH.png" alt="">
     <h1>Музыкальный кот</h1>
 Есть в планах воссоздание головоломки, но на данный момент бесполезная флешка, хотя может кому-нибудь пригодится чтобы запомнить ноты на слух  
@@ -119,7 +119,7 @@ VK.Widgets.Like("vk_like", {
     <h1>CSS стиль для лаба</h1> 
 Задрало каждый раз закрывать окошко приглашеня  друзей, хочется сделать окно больше не используя полноэкранный режим? Тогда попробуйте CSS стиль
   </div>  
-  <!--  <div onclick="location.href='https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Жулики';" >
+  <!--  <div onclick="location.href='/жулики';" >
     <img align="left" src="http://screen.fst.su/support/19IVW3C.png" alt=""> 
     <h1>Наши подражатели</h1> 
 Что сказать, когда нечего сказать?
