--- a/ответы/index.html
+++ b/ответы/index.html
@@ -21,8 +21,8 @@
   <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="jquery.zclip.js"></script>
   <script type="text/javascript" src="js.js"></script>
-  <link href="https://108e604d40776702ee18716599c1a64552003a9f.googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/%D0%9E%D1%82%D0%B2%D0%B5%D1%82%D1%8B/themes/3.css" rel="stylesheet">
-  <script type="text/javascript" src="https://108e604d40776702ee18716599c1a64552003a9f.googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/%D0%9E%D1%82%D0%B2%D0%B5%D1%82%D1%8B/intro.js"></script>
+  <link href="themes/3.css" rel="stylesheet">
+  <script type="text/javascript" src="intro.js"></script>
   <link rel="shortcut icon" type="image/gif" href="http://cs5616.vk.me/u85369729/656f382x.gif?3">
   <script type="text/javascript" src="http://vk.com/js/api/share.js?90" charset="windows-1251"></script>
   <script type="text/javascript" src="//vk.com/js/api/openapi.js?112"></script>
@@ -150,9 +150,9 @@
 <div id="switch" class='topF covF'>
   <header class="strip intro">
     <div class="wrapper">
-      <h1  id="FAQ" class="library-title">Ответы v0.2</h1>
+      <h1  id="FAQ" class="library-title">Скопируй новый адрес</h1>
                                            <h3 class="library-trailer h4 subheading">
-Найти ответ? Нет ничего проще! Жми Ctrl+F и вводи текст вопроса, как только нужный вопрос появится на экране кликай по нему и ...
+гугл драйв на котором лежали ответы закрываетсяНайти ответ? Нет ничего проще! Жми Ctrl+F и вводи текст вопроса, как только нужный вопрос появится на экране кликай по нему и ...
       </h3>
 
 
@@ -212,7 +212,7 @@
 
 
       <p class="library-meta margin_none">
-        Eсли тебе больше понравилась старая версия, найти её можно <a href="https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/%D0%9E%D1%82%D0%B2%D0%B5%D1%82%D1%8B/v0.1/" class="help">тут</a>
+        Eсли тебе больше понравилась старая версия, найти её можно <a href="v0.1/" class="help">тут</a>
       </p>
     </div>
   </header>
@@ -224,7 +224,7 @@
       <div class="actions-share">
 
         <div  class="actions-pluso">
-          <div style="padding:0px 0px 0px 0px " class="pluso" data-background="none;" data-options="big,square,line,horizontal,counter,sepcounter=1,theme=14" data-services="vkontakte,odnoklassniki,moimir,bookmark" data-url="https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/Ответы/" data-user="1527307587"></div>
+          <div style="padding:0px 0px 0px 0px " class="pluso" data-background="none;" data-options="big,square,line,horizontal,counter,sepcounter=1,theme=14" data-services="vkontakte,odnoklassniki,moimir,bookmark" data-url="https://labirint1.github.io/ответы/" data-user="1527307587"></div>
         </div>
       </div>
 
