--- a/Ответы/index.html
+++ b/Ответы/index.html
@@ -156,9 +156,11 @@
   <div id="switch" class='topF covF'>
     <header class="strip intro">
       <div class="wrapper">
-        <h1 id="FAQ" class="library-title">Скопируй новый адрес</h1>
+        <h1 id="FAQ" class="library-title">  <a href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/
+">Скопируй новый адрес</a></h1>
         <h3 class="library-trailer h4 subheading">
-гугл драйв на котором лежали ответы закрываетсяНайти ответ? Нет ничего проще! Жми Ctrl+F и вводи текст вопроса, как только нужный вопрос появится на экране кликай по нему и ...
+гугл драйв на котором лежали ответы закрывается, скопируй ссылку нового адреса   <a href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/
+">https://labirint1.github.io/ответы</a> чтоб не потерять, расскажи товарищам и друзьям
       </h3>
 
 
