http://reformal.ru/

--- a/Ответы/index.html
+++ b/Ответы/index.html
@@ -115,7 +115,7 @@
           <div class="grid-item one_third  hide">
 
             <div class="plus">
-              <div class="pluso" data-background="transparent" data-options="big,square,line,vertical,nocounter,theme=02" data-services="bookmark" data-url="http://vk.cc/2CUlWq" data-user="1527307587"></div>
+              <div class="pluso" data-background="transparent" data-options="big,square,line,vertical,nocounter,theme=02" data-services="bookmark" data-url="https://labirint1.github.io/ответы/" data-user="1527307587"></div>
             </div>
 
             <button class="button rounded large secondary purch exitB ">
