--- a/Ответы/vk/index.html
+++ b/Ответы/vk/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <link rel="canonical" href="https://labirint1.github.io/ответы">
 <script src="https://1170349065c0d3d9852b6697bdd6cc1b5fc8aa21.googledrive.com/host/0B0zTgDj4fTXrclc3dGlpUUVnVjA/KEY/KEYL5.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="../jquery.zclip.js"></script>
