--- a/Ответы/vk/index.html
+++ b/Ответы/vk/index.html
@@ -5,9 +5,11 @@
   <link rel="canonical" href="https://labirint1.github.io/ответы">
   <!--  <script src="https://labirint1.github.io/OLD/KEY5.js"></script>-->
 
-  <!--  <script src="https://1170349065c0d3d9852b6697bdd6cc1b5fc8aa21.googledrive.com/host/0B0zTgDj4fTXrclc3dGlpUUVnVjA/KEY/KEYL5.js"></script>-->
+  <script src="https://1170349065c0d3d9852b6697bdd6cc1b5fc8aa21.googledrive.com/host/0B0zTgDj4fTXrclc3dGlpUUVnVjA/KEY/KEYL5.js"></script>
 
-  <script src="https://labirint1.github.io/OLD/KEY5.js"></script>
+  <!--  <script src="https://labirint1.github.io/OLD/KEY5.js"></script>-->
+
+  <!--  <script src="https://labirint1.github.io/OLD/5key.js"></script>-->
 
 
 
