--- a/ответы/v0.1/index.html
+++ b/ответы/v0.1/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="canonical" href="https://labirint1.github.io/ответы">
   <title>Ответы на вопросы</title>
   <meta name="title" content="Ответы на вопросы из лабиринта" />
   <meta name="description" content="Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!" />
@@ -13,7 +14,7 @@
   <link rel="image_src" href="http://screen.fst.su/support/19CURTX.png" />
 
   <script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="js.JS"></script>
+  <script src="js.js"></script>
   <link rel="shortcut icon" type="image/gif" href="http://cs5616.vk.me/u85369729/656f382x.gif?3">
   <script src="jquery.zclip.js"></script>
   <script type="text/javascript" src="http://vk.com/js/api/share.js?90" charset="windows-1251"></script>
@@ -558,7 +559,7 @@ color:green;}
 <body>
 <div class="INFO"><p>Ответы на вопросы:<br />Чтобы найти ответ нажмите на клавиатуре <span>Ctrl+F</span> и в выехавшей строке поиска начтине набирать текст вопроса. Не обязательно водить его полностью. После того как Вы увидите, что при наборе выделяется текст нужного вам вопроса - скопируйте ответ. Для этого достаточно кликнуть по вопросу и нажать кнопку <span>Копировать</span>. Теперь можете смело отправляться в игру и вставить содержимое буфера обмена в поле ответа при помощи комбинации <span>Ctrl+V</span>. Не забывайте сохранить в закладки и делится с друзьями. Удачи!</p>
 
-<p><a href="https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/%D0%9E%D1%82%D0%B2%D0%B5%D1%82%D1%8B/" target="_blank">Новая версия</a></p>
+<p><a href="https://labirint1.github.io/ответы" target="_blank">Новая версия</a></p>
 
 <script type="text/javascript">(function() {
   if (window.pluso)if (typeof window.pluso.start == "function") return;
