--- a/ответы/v0.1/index.html
+++ b/ответы/v0.1/index.html
@@ -570,7 +570,7 @@ color:green;}
     var h=d[g]('body')[0];
     h.appendChild(s);
   }})();</script>
-<div style="padding:0px 0px 0px 15px " class="pluso" data-background="none;" data-options="big,square,line,horizontal,counter,sepcounter=1,theme=14" data-services="vkontakte,odnoklassniki,moimir,bookmark" data-url="https://googledrive.com/host/0B0zTgDj4fTXrams5M0F3c2d3Z3c/%D0%9E%D1%82%D0%B2%D0%B5%D1%82%D1%8B/" data-user="1527307587"></div>
+<div style="padding:0px 0px 0px 15px " class="pluso" data-background="none;" data-options="big,square,line,horizontal,counter,sepcounter=1,theme=14" data-services="vkontakte,odnoklassniki,moimir,bookmark" data-url="https://labirint1.github.io/ответы" data-user="1527307587"></div>
 
 <img style="display:none" src="http://screen.fst.su/support/19CUP8U.png" alt="" >
   <!-- Yandex.Metrika informer -->
