--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <title>LABIRINT№1</title>
   <script type="text/javascript" src="//vk.com/js/api/openapi.js?112"></script>
   <style>
