--- a/ответы/index.html
+++ b/ответы/index.html
@@ -24,7 +24,10 @@
   <script type="text/javascript" src="js.js"></script>
   <link href="themes/3.css" rel="stylesheet">
   <script type="text/javascript" src="intro.js"></script>
-  <link rel="shortcut icon" type="image/gif" href="http://cs5616.vk.me/u85369729/656f382x.gif?3">
+
+
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
   <script type="text/javascript" src="http://vk.com/js/api/share.js?90" charset="windows-1251"></script>
   <script type="text/javascript" src="//vk.com/js/api/openapi.js?112"></script>
   <!--<script type="text/javascript" src="notifi.js"></script>-->
