--- a/ответы/v0.1/index.html
+++ b/ответы/v0.1/index.html
@@ -627,7 +627,7 @@ VK.Widgets.Like("vk_like", {
     pageDescription: "Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!",
     text: "Пыщ пыщ ололо",
           pageUrl: "https://labirint1.github.io/Ответы",
-    pageImage: "http://screen.fst.su/support/19FQ494.jpg",
+    pageImage: "https://labirint1.github.io/OLD/19FQ494.jpg",
     },429);
 </script>
 
