--- a/пузыри/index.html
+++ b/пузыри/index.html
@@ -111,33 +111,33 @@
       pageDescription: "Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!",
       text: "Пыщ пыщ ололо",
       pageUrl: "https://labirint1.github.io/Ответы",
-      pageImage: "http://screen.fst.su/support/19FQ494.jpg",
+      pageImage: "https://labirint1.github.io/OLD/19FQ494.jpg",
     }, 429);
   </script>
 
   <div class="list">
     <div onclick="location.href='/ответы';">
-      <img align="left" src="http://screen.fst.su/support/19II87M.png" alt="">
+      <img align="left" src="https://labirint1.github.io/OLD/19II87M.png" alt="">
       <h1>Ответы на вопросы</h1> Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!
     </div>
     <div onclick="location.href='http://vk.com/app4190522';">
-      <img align="left" src="http://screen.fst.su/support/19ISSL9.png" alt="">
+      <img align="left" src="https://labirint1.github.io/OLD/19ISSL9.png" alt="">
       <h1>Пароли тренировка</h1> Не знаешь как их решить, хочешь решать быстрее? Тогда тебе сюда, тренируйся и решай быстрее всех!
     </div>
     <div onclick="location.href='/пузыри';">
-      <img align="left" src="http://screen.fst.su/support/19ISUEK.png" alt="">
+      <img align="left" src="https://labirint1.github.io/OLD/19ISUEK.png" alt="">
       <h1>Как решать пузыри?</h1> Подробная инструкция ПРАВИЛЬНОГО решения пузырей. И пусть все долбаёбы думают что ты читер!
     </div>
     <div onclick="location.href='/музыкальный кот';">
-      <img align="left" src="http://screen.fst.su/support/19IT2FH.png" alt="">
+      <img align="left" src="https://labirint1.github.io/OLD/19IT2FH.png" alt="">
       <h1>Музыкальный кот</h1> Есть в планах воссоздание головоломки, но на данный момент бесполезная флешка, хотя может кому-нибудь пригодится чтобы запомнить ноты на слух
     </div>
     <div onclick="location.href='http://userstyles.org/styles/97683/labirint-1';">
-      <img align="left" src="http://screen.fst.su/support/19IT7B0.png" alt="">
+      <img align="left" src="https://labirint1.github.io/OLD/19IT7B0.png" alt="">
       <h1>CSS стиль для лаба</h1> Задрало каждый раз закрывать окошко приглашеня друзей, хочется сделать окно больше не используя полноэкранный режим? Тогда попробуйте CSS стиль
     </div>
     <!--  <div onclick="location.href='/жулики';" >
-    <img align="left" src="http://screen.fst.su/support/19IVW3C.png" alt="">
+    <img align="left" src="https://labirint1.github.io/OLD/19IVW3C.png" alt="">
     <h1>Наши подражатели</h1>
 Что сказать, когда нечего сказать?
   </div>-->
