--- a/ответы/index.html
+++ b/ответы/index.html
@@ -10,7 +10,7 @@
   <!-- <meta name="title" content="LABIRINT№1 Ответы на вопросы" />-->
   <meta name="description" content="Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрее всех. Будь настоящим эрудитом!" />
   <!--<link rel="image_src" href="http://screen.fst.su/support/19CUQJT.png" />-->
-  <link rel="image_src" href="http://screen.fst.su/support/19CW1V7.png" />
+  <link rel="image_src" href="//labirint1.github.io/OLD/19FQ494.jpg" />
   <!--<link rel="image_src" href="http://screen.fst.su/support/19CUP8U.png" />-->
   <!--<link rel="image_src" href="http://screen.fst.su/support/19CUPSZ.png" />-->
   <!--<link rel="image_src" href="http://screen.fst.su/support/19CUR9Q.png" />-->
@@ -143,15 +143,15 @@
   <div class="toolbar">
     <div class="wrapper">
       <div id="logo" class="logo">
-        <a href="http://vk.cc/2EvzOh?***">
-          <img style='width:250px !important;' src="http://screen.fst.su/support/19X2OME.png" alt=""></a>
+        <a href="//vk.cc/5DNpCn?NEW_Ответы">
+          <img style='width:250px !important;' src="//labirint1.github.io/OLD/19X2OME.png" alt=""></a>
         by
-        <a href="http://vk.cc/2EvzOh?***">LABIRINT№1</a>
+        <a href="//vk.cc/5DNpCn?NEW_Ответы">LABIRINT№1</a>
 
       </div>
       <nav class="menu lap-text_right">
         <a href="javascript:void(0)" class="menu-link help">Help</a>
-        <a href="http://vk.cc/2EvzOh?***" class="menu-link">About</a>
+        <a href="//vk.cc/5DNpCn?NEW_Ответы" class="menu-link">About</a>
 
       </nav>
     </div>
@@ -159,10 +159,10 @@
   <div id="switch" class='topF covF'>
     <header class="strip intro">
       <div class="wrapper">
-        <h1 id="FAQ" class="library-title">  <a href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/
+        <h1 id="FAQ" class="library-title">  <a href="//labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/
 ">Скопируй новый адрес</a></h1>
         <h3 class="library-trailer h4 subheading">
-гугл драйв на котором лежали ответы закрывается, скопируй ссылку нового адреса   <a href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/
+гугл драйв на котором лежали ответы закрывается, скопируй ссылку нового адреса   <a href="//labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/
 ">https://labirint1.github.io/ответы</a> чтоб не потерять, расскажи товарищам и друзьям
       </h3>
 
@@ -3275,8 +3275,8 @@
             <br>
 
 
-            <a href="http://vk.com/app2247474" target="_blank">LABIRINT№1</a>
-            <br>2014
+            <a href="//vk.com/app2247474" target="_blank">LABIRINT№1</a>
+            <br>2014 - 2016
             <br>
           </p>
         </div>
