--- a/Ответы/index.html
+++ b/Ответы/index.html
@@ -9,12 +9,12 @@
   <meta name="title" content="Ответы на вопросы из лабиринта" />
   <!-- <meta name="title" content="LABIRINT№1 Ответы на вопросы" />-->
   <meta name="description" content="Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрее всех. Будь настоящим эрудитом!" />
-  <!--<link rel="image_src" href="http://screen.fst.su/support/19CUQJT.png" />-->
+  <!--<link rel="image_src" href="//screen.fst.su/support/19CUQJT.png" />-->
   <link rel="image_src" href="//labirint1.github.io/OLD/19FQ494.jpg" />
-  <!--<link rel="image_src" href="http://screen.fst.su/support/19CUP8U.png" />-->
-  <!--<link rel="image_src" href="http://screen.fst.su/support/19CUPSZ.png" />-->
-  <!--<link rel="image_src" href="http://screen.fst.su/support/19CUR9Q.png" />-->
-  <!--<link rel="image_src" href="http://screen.fst.su/support/19CURTX.png" />-->
+  <!--<link rel="image_src" href="//screen.fst.su/support/19CUP8U.png" />-->
+  <!--<link rel="image_src" href="//screen.fst.su/support/19CUPSZ.png" />-->
+  <!--<link rel="image_src" href="//screen.fst.su/support/19CUR9Q.png" />-->
+  <!--<link rel="image_src" href="//screen.fst.su/support/19CURTX.png" />-->
 
   <link rel="stylesheet" href="css.css">
   <link rel="stylesheet" href="LABS.css">
@@ -28,7 +28,7 @@
 
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
-  <script type="text/javascript" src="http://vk.com/js/api/share.js?90" charset="windows-1251"></script>
+  <script type="text/javascript" src="//vk.com/js/api/share.js?90" charset="windows-1251"></script>
   <script type="text/javascript" src="//vk.com/js/api/openapi.js?112"></script>
   <!--<script type="text/javascript" src="notifi.js"></script>-->
 </head>
