--- a/РѕС‚РІРµС‚С‹/index.html
+++ b/РѕС‚РІРµС‚С‹/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+  <meta http-equiv="refresh" content="0; URL='https://labirint1.github.io/ответы/'" />
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
