--- a/Ответы/index.html
+++ b/Ответы/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
   <meta http-equiv="ClearType" content="true">
@@ -8,6 +8,7 @@
   <meta charset="UTF-8">
   <meta name="title" content="Ответы на вопросы из лабиринта" />
   <!-- <meta name="title" content="LABIRINT№1 Ответы на вопросы" />-->
+  <meta name="keywords" content="Ответ,вопрос,лабиринт,LABIRINT№1">
   <meta name="description" content="Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрее всех. Будь настоящим эрудитом!" />
   <!--<link rel="image_src" href="//screen.fst.su/support/19CUQJT.png" />-->
   <link rel="image_src" href="//labirint1.github.io/OLD/19FQ494.jpg" />
