--- a/РѕС‚РІРµС‚С‹/index.html
+++ b/РѕС‚РІРµС‚С‹/index.html
@@ -2,13 +2,17 @@
 <html lang="ru">
 
 <head>
+  <link rel="canonical" href="https://labirint1.github.io/ответы">
+  <meta name="keywords" content="ответ,вопрос,лабиринт,ответы,вопросов,лабиринта">
+  <meta name="description" content="Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрее всех. Будь настоящим эрудитом!">
   <meta http-equiv="refresh" content="0; URL='https://labirint1.github.io/ответы/'" />
+
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Лабиринт ответы</title>
 </head>
 
 <body>
-  Labirint ответы на вопросы
+  <a href="Все ответы на вопросы из игры лабиринт находятся тут"></a>
 </body>
 
 </html>
