--- a/Ответы/v0.1/Index.html
+++ b/Ответы/v0.1/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="canonical" href="https://labirint1.github.io/ответы">
+  <link rel="canonical" href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/">
   <title>Ответы на вопросы</title>
   <meta name="title" content="Ответы на вопросы из лабиринта" />
   <meta name="description" content="Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрей всех. Будь настоящим эрудитом!" />
