--- a/РѕС‚РІРµС‚С‹/index.html
+++ b/РѕС‚РІРµС‚С‹/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <link rel="canonical" href="https://labirint1.github.io/ответы">
+  <link rel="canonical" href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/">
   <meta name="keywords" content="ответ,вопрос,лабиринт,ответы,вопросов,лабиринта">
   <meta name="description" content="Здесь в удобном формате собраны ответы на все вопросы из Лабиринта. Отвечай быстрее всех. Будь настоящим эрудитом!">
   <meta http-equiv="refresh" content="0; URL='https://labirint1.github.io/ответы/'" />
