--- a/Ответы/vk/index.html
+++ b/Ответы/vk/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="canonical" href="https://labirint1.github.io/ответы">
+  <link rel="canonical" href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/">
   <!--  <script src="https://labirint1.github.io/OLD/KEY5.js"></script>-->
 
   <!--  <script src="https://1170349065c0d3d9852b6697bdd6cc1b5fc8aa21.googledrive.com/host/0B0zTgDj4fTXrclc3dGlpUUVnVjA/KEY/KEYL5.js"></script>-->
