--- a/ответы/index.html
+++ b/ответы/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+   <link rel="canonical" href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/">
   <meta http-equiv="ClearType" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Лабиринт - ответы на вопросы</title>
