--- a/ответы/index.html
+++ b/ответы/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-   <link rel="canonical" href="https://labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/">
+   <link rel="canonical" href="//labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/">
   <meta http-equiv="ClearType" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Лабиринт - ответы на вопросы</title>
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="css.css">
   <link rel="stylesheet" href="LABS.css">
   <link rel="stylesheet" href="animate.min.css">
-  <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="jquery.zclip.js"></script>
   <script type="text/javascript" src="js.js"></script>
   <link href="themes/3.css" rel="stylesheet">
