--- a/Ответы/index.html
+++ b/Ответы/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-   <link rel="canonical" href="//labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/">
+  <link rel="canonical" href="//labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/">
   <meta http-equiv="ClearType" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Лабиринт - ответы на вопросы</title>
@@ -161,11 +161,9 @@
   <div id="switch" class='topF covF'>
     <header class="strip intro">
       <div class="wrapper">
-        <h1 id="FAQ" class="library-title">  <a href="//labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/
-">Скопируй новый адрес</a></h1>
+        <h1 id="FAQ" class="library-title">Ответы v0.2</h1>
         <h3 class="library-trailer h4 subheading">
-гугл драйв на котором лежали ответы закрывается, скопируй ссылку нового адреса   <a href="//labirint1.github.io/%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D1%8B/
-">https://labirint1.github.io/ответы</a> чтоб не потерять, расскажи товарищам и друзьям
+Найти ответ? Нет ничего проще! Жми Ctrl+F и вводи текст вопроса, как только нужный вопрос появится на экране кликай по нему и ...
       </h3>
 
 
